feat: Adiciona teste para criação de produto.
chore:
- Adiciona dependências para testes com containers;
- Adiciona builder em ProductCreateDto. Facilita instanciação nos testes;
- Adiciona ignore para perfil de tests em AdminBootstrapConfig.